# ARIA

./: .gitignore  ARCHITECTURE.md  README.md  TESTPLAN.md  pyproject.toml
aria/: __init__.py  __main__.py  app.py
aria/agents/: __init__.py  base.py  browser_setup.py  specialists.py  web_agent.py
aria/config/: __init__.py  hardware.py  keyring.py  loader.py  schema.py
aria/core/: __init__.py  daemon.py  debug.py  executor.py  lines.py  memory.py  orchestrator.py  prompts.py  runtime.py  scheduler.py  service.py  session.py
aria/integrations/: __init__.py  google_auth.py  google_connect.py
aria/llm/: __init__.py  base.py  fallback.py  groq_provider.py  local_fallback.py  ollama.py  openai_compat.py  router.py
aria/mcp/: __init__.py  client.py  servers.py
aria/packaging/: aria-launcher.sh  aria.desktop  aria.service  build_deb.sh  fetch_models.sh  postinst  postrm  prerm
aria/safety/: __init__.py  audit.py  permissions.py
aria/tools/: __init__.py  base.py  calendar_tool.py  commerce.py  errands.py  files.py  gmail_tool.py  math_tool.py  memory_tool.py  search.py  system.py  timeinfo.py  timers.py  weather.py  web.py
aria/tui/: __init__.py  chat.py  voices.py  wizard.py
aria/voice/: __init__.py  audio.py  base.py  chime.py  hotkey.py  pipeline.py  sentencizer.py  stt_faster_whisper.py  stt_groq.py  tts_kokoro.py  tts_piper.py  vad.py  wakeword.py
scripts/: install_commerce.sh  install_local.sh  pick_model.py  validate_brain.py
tests/: conftest.py  test_activation.py  test_brain.py  test_browser_setup.py  test_commerce.py  test_config.py  test_confirmation.py  test_conversation.py  test_daemon.py  test_errands.py  test_faithfulness.py  test_followup.py  test_gmail.py  test_google.py  test_local_fallback.py  test_memory_daily.py  test_notifications.py  test_ollama.py  test_packaging.py  test_research.py  test_resilience.py  test_robustness.py  test_router_memory.py  test_scheduler.py  test_system_tools.py  test_tools.py  test_tts_piper.py  test_voice_loop.py  test_voices.py  test_weather.py  test_wizard.py
